# jellyseek

./: .env.example  .gitignore  LICENSE  README.md  jellyseek.config  pyproject.toml  setup.py
prompts/: embeddings_prompt.txt  generation_prompt.txt
src/: __main__.py
src/jellyfin_export/: config.py  main.py
src/jellyseek/: __main__.py
src/jellyseek/jellyfin_export/: config.py  main.py
src/jellyseek/rag/: commands.py  config.py  database.py  db_generator.py  llm.py  movie_chat.py
src/rag/: config.py  db_generator.py  movie_chat.py
src/rag_gen/: db_generator.py  movie_chat.py  rag.py
